--- a/frontend/src/app/comments/comment-list/comment-list.component.css
+++ b/frontend/src/app/comments/comment-list/comment-list.component.css
@@ -2,3 +2,10 @@
   padding: 15px 35px;
   background-color: #f0f0f0;
 }
+
+.btn-custom {
+  background-color: transparent;
+  border: none;
+  color: blue;
+  text-transform: uppercase;
+}
