--- a/frontend/src/app/comments/comment-list/comment-list.component.html
+++ b/frontend/src/app/comments/comment-list/comment-list.component.html
@@ -6,7 +6,10 @@
     <h4 class="mt-3 mb-3">Comments ({{ commentCount }})</h4>
 
     <!-- Comments Section   -->
-    <div *ngFor="let comment of commentsArray" class="comment-box mt-3">
+    <div
+      *ngFor="let comment of commentsArray; let i = index"
+      class="comment-box mt-3"
+    >
       <h6 class="mb-0">{{ comment.data.name }}</h6>
       <small class="text-danger"
       >LAST UPDATED - {{ comment.data.createdAt.toMillis() | date }}</small
@@ -16,22 +19,29 @@
         {{ comment.data.comment }}
       </div>
 
-      <a class="mt-1" href="post/9pknTh4NIdKh98sXp52m#comment">Reply</a>
-      <a class="mt-1 ml-3" href="#">View Reply</a>
+      <button (click)="toggleReply(i)" class="btn btn-sm btn-primary btn-custom mt-1">
+        Reply
+      </button>
 
-      <!--  Replies Section   -->
-      <!--      <div class="ml-4 mt-5">-->
-      <!--        <div class="mb-3">-->
-      <!--          <h6 class="mb-0">John Doe</h6>-->
-      <!--          <small class="text-danger">LAST UPDATED - SEP 20, 2023</small>-->
+      <button
+        (click)="toggleReplyList(i)"
+        class="btn btn-sm btn-primary btn-custom mt-1 ml-3"
+      >
+        View Reply
+      </button>
 
-      <!--          <div class="mt-2 mb-5">-->
-      <!--            Lorem ipsum dolor sit amet consectetur. Volutpat pellentesque aliquam-->
-      <!--            mauris purus non. Interdum tellus ornare enim proin nulla tristique-->
-      <!--            ullamcorper nibh.-->
-      <!--          </div>-->
-      <!--        </div>-->
-      <!--      </div>-->
+      <app-comment-form
+        *ngIf="isReply && activeCommentIndex === i"
+        [parentId]="comment.id"
+      ></app-comment-form>
+
+      <!--        Replies Section   -->
+      <div *ngIf="isReplyList && activeCommentIndex === i">
+        <app-child-comment-list
+          [parentId]="comment.id"
+          [postId]="comment.data.postId"
+        ></app-child-comment-list>
+      </div>
     </div>
   </div>
 </div>
