--- a/frontend/src/app/layouts/footer/footer.component.html
+++ b/frontend/src/app/layouts/footer/footer.component.html
@@ -2,20 +2,20 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <a class="site-logo" href="#">ANG_BLOG</a>
+        <a [routerLink]="['/']" class="site-logo">ANG_BLOG</a>
         <div>
           <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a [routerLink]="['/']" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a [routerLink]="['/about']" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Terms & Conditions</a>
+              <a [routerLink]="['/term-condition']" class="nav-link">Terms & Conditions</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a [routerLink]="['/contact']" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
