--- a/frontend/src/app/pages/about-us/about-us.component.html
+++ b/frontend/src/app/pages/about-us/about-us.component.html
@@ -1,7 +1,7 @@
 <section class="mt-5">
-  <div class="container mt-5 mb-5 p-5 bg-theme">
+  <div class="container mt-5 mb-5 p-3 p-md-5 bg-theme">
     <h1 class="text-white text-center">ABOUT US</h1>
-    <div class="p-5 mt-4 bg-secondary-theme text-theme-primary">
+    <div class="p-3 p-md-5 mt-4 bg-secondary-theme text-theme-primary">
       <p>
         Lorem ipsum dolor sit amet consectetur. Mi nibh nisl nullam diam arcu.
         Nisl pellentesque quisque orci ultrices ligula platea nisl. Lorem mauris
