--- a/frontend/src/app/pages/about-us/about-us.component.html
+++ b/frontend/src/app/pages/about-us/about-us.component.html
@@ -37,7 +37,7 @@
       </p>
 
       <div class="text-center">
-        <button class="btn btn-info btn-sm mt-4 btn-theme">Back To Home</button>
+        <button class="btn btn-info mt-4 btn-theme">Back To Home</button>
       </div>
     </div>
   </div>
