--- a/frontend/src/app/pages/contact-us/contact-us.component.html
+++ b/frontend/src/app/pages/contact-us/contact-us.component.html
@@ -1,1 +1,9 @@
-<p>contact-us works!</p>
+<section class="mt-5">
+  <div class="container mt-5 mb-5 p-3 p-md-5 bg-theme">
+    <h1 class="text-white text-center">CONTACT US</h1>
+    <p class="text-white text-center">Lorem ipsum dolor sit amet consectetur</p>
+    <div class="p-3 p-md-5 mt-4 bg-white text-theme-primary">
+      <app-contact-form></app-contact-form>
+    </div>
+  </div>
+</section>
