--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -28,3 +28,12 @@
     </div>
   </div>
 </section>
+
+
+<div class="container mt-5 mb-5">
+  <div class="row justify-content-center">
+    <div class="col-md-12">
+      <app-subscription-form></app-subscription-form>
+    </div>
+  </div>
+</div>
