--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -57,7 +57,7 @@ input[type = text], input[type = email] {
   height: 58px;
   border: none;
   font-size: 13px;
-  background-color: var(--primary-color);
+  background-color: var(--primary-color) !important;
 }
 
 
