--- a/backend/src/app/categories/categories.component.html
+++ b/backend/src/app/categories/categories.component.html
@@ -3,29 +3,35 @@
     <div class="col-md-12 bg-secondary-theme p-5 shadow-effect">
       <h3 class="text-center text-theme-primary">{{ status }} Categories</h3>
       <p class="text-center">You can {{ status }} new Categories from here!</p>
+      <div class="text-center mb-5">
+        <button class="btn btn-warning ml-2" routerLink="/">
+          Back To Dashboard
+        </button>
+      </div>
+
 
       <form
-        class="form-inline text-center"
         #categoryForm="ngForm"
         (ngSubmit)="onSubmit(categoryForm)"
+        class="form-inline text-center"
       >
         <div class="form-group col-md-9">
           <input
-            type="text"
-            placeholder="Add new categories"
-            class="form-control shadow-effect w-100"
-            name="category"
-            ngModel
             #newCategory="ngModel"
-            required
+            [(ngModel)]="formCategory"
             [ngClass]="{
               'is-invalid': newCategory.touched && newCategory.invalid
             }"
-            [(ngModel)]="formCategory"
+            class="form-control shadow-effect w-100"
+            name="category"
+            ngModel
+            placeholder="Add new categories"
+            required
+            type="text"
           />
           <div
-            class="alert alert-danger w-100"
             *ngIf="newCategory.touched && newCategory.invalid"
+            class="alert alert-danger w-100"
           >
             Category field is required
           </div>
@@ -33,8 +39,8 @@
 
         <div class="form-group col-md-3">
           <button
-            class="btn btn-info btn-block btn-theme"
             [disabled]="categoryForm.invalid"
+            class="btn btn-info btn-block btn-theme"
           >
             {{ status }} Category
           </button>
@@ -60,10 +66,10 @@
               <td>{{ i + 1 }}</td>
               <td>{{ category.data.category }}</td>
               <td>
-                <button class="btn btn-sm btn-danger" (click)="onDelete(category.id)">Delete</button>
+                <button (click)="onDelete(category.id)" class="btn btn-sm btn-danger">Delete</button>
                 <button
-                  class="btn btn-sm btn-info ml-1"
                   (click)="onEdit(category.data.category, category.id)"
+                  class="btn btn-sm btn-info ml-1"
                 >
                   Edit
                 </button>
